--- a/src/style.css
+++ b/src/style.css
@@ -354,6 +354,13 @@ button:focus {
   background-color: #aac4ff;
 }
 
+.home4 {
+  position: relative;
+  padding-bottom: 70px !important;
+  padding-top: 70px !important;
+  background-color: #eef1ff;
+}
+
 .home-about-description {
   color: white !important;
   padding-top: 100px !important;
