--- a/src/style.css
+++ b/src/style.css
@@ -141,11 +141,15 @@ button:focus {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #181a27 !important;
+    background-color: white !important;
   }
 
   .navbar-nav .nav-item a::after {
     display: none !important;
+  }
+
+  .navbar-nav .nav-link {
+    color: white !important;
   }
 }
 
@@ -247,6 +251,7 @@ button:focus {
   padding-top: 80px !important;
 }
 
+
 .home-section {
   position: relativa;
   z-index: -1;
@@ -255,6 +260,27 @@ button:focus {
   background-position: top center;
   background-repeat: no-repeat;
 }
+
+.home-akhir {
+  position: relativa;
+  z-index: -1;
+  background-image: url(./Assets/img.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 767px) {
+  .home-akhir {
+    background-size: auto;
+  }
+
+  .main-name {
+    margin-bottom: auto;
+    margin-left: -15px;
+    font-size: 30px;
+  }
+}
+
 
 .home-login {
   position: relativa;
@@ -295,9 +321,23 @@ button:focus {
 
 }
 
+.heading-name-akhir {
+  font-size: 2.5em !important;
+  padding-left: 45px !important;
+  text-align: center;
+}
+
+.name-akhir {
+  padding-bottom: 150px;
+}
+
 .heading-website {
   font-size: 1.8em !important;
   padding-left: 45px !important;
+}
+
+.heading-name-akhir button {
+  text-align: center;
 }
 
 .main-name {
@@ -342,8 +382,8 @@ button:focus {
 
 .home-about-section {
   position: relative;
-  padding-bottom: 70px !important;
-  padding-top: 70px !important;
+  padding-bottom: 170px !important;
+  padding-top: 170px !important;
   background-color: #eef1ff;
 }
 
@@ -355,6 +395,13 @@ button:focus {
 }
 
 .home4 {
+  position: relative;
+  padding-bottom: 70px !important;
+  padding-top: 70px !important;
+  background-color: #eef1ff;
+}
+
+.home5 {
   position: relative;
   padding-bottom: 70px !important;
   padding-top: 70px !important;
@@ -440,7 +487,7 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10, 4, 22);
+  background-color: blueviolet;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important;
@@ -677,20 +724,18 @@ button {
 .login-form {
   background: #fff;
   width: 25em;
-  margin: 205px auto;
-  margin-right: 100px;
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
-  border-radius: 10px;
-  box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+
 }
 
 .login-form h1 {
   padding: 35px 35px 0 35px;
   font-weight: 300;
+  font-family: cursive
 }
 
 .login-form .content {
@@ -818,17 +863,23 @@ button {
 
 }
 
-@media screen and (max-width: 992px) {
+@media (max-width: 767px) {
   .login-form {
     width: 100%;
+    margin-left: -30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .col-md-5 {
+    margin-left: -40px;
   }
 }
 
 .form {
-  padding: 0.375rem 0.75rem;
+  padding: 0.375rem 00.75rem;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
-
 }
 
 .form:focus {
@@ -837,4 +888,19 @@ button {
   border-color: #86b7fe;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+}
+
+.card-paket h1 {
+  padding-top: 20px;
+  font-weight: bold;
+}
+
+.card-tema h1 {
+  font-size: 2rem;
+  padding-top: 15px;
+}
+
+.home-header .btn-akhir {
+  justify-content: center;
+  display: ;
 }
