--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* .App {
+.App {
   text-align: center;
 }
 
@@ -13,7 +13,7 @@
   }
 }
 
-/* .App-header {
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,7 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-} */
+}
 
 .App-link {
   color: #61dafb;
@@ -32,24 +32,28 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
-} */
+}
 
-*{
-  margin:0;
-  padding:0;
+*/ * {
+  margin: 0;
+  padding: 0;
   text-decoration: none;
 }
-.container{
-  display:flex;
+
+.container {
+  display: flex;
 }
-main{
+
+main {
   width: 100%;
   padding: 20px;
 }
-.sidebar{
+
+.sidebar {
   background: #075AA9;
   color: rgb(0, 0, 0);
   height: 100vh;
@@ -57,37 +61,46 @@ main{
   transition: all 0.5s;
   margin-left: 0px;
 }
-.top_section{
+
+.top_section {
   display: flex;
-  align-items:center;
-  padding:20px 15px;
+  align-items: center;
+  padding: 20px 15px;
 }
-.logo{
+
+.logo {
   font-size: 30px;
 }
-.bars{
+
+.bars {
   display: flex;
   font-size: 25px;
 }
-.link{
+
+.link {
   display: flex;
   color: rgb(0, 0, 0);
   padding: 10px 15px;
   gap: 15px;
   transition: all 0.5s;
 }
-.link:hover{
-  background:rgb(252, 254, 255);
+
+.link:hover {
+  background: rgb(252, 254, 255);
   color: #000;
   transition: all 0.5s;
 }
-.active{
+
+.active {
   background: #ffff;
   color: #000;
 }
-.icon, .link_text{
+
+.icon,
+.link_text {
   font-size: 20px;
 }
-.body{
+
+.body {
   background-color: #D9D9D9;
 }
