--- a/src/style.css
+++ b/src/style.css
@@ -153,6 +153,8 @@ button:focus {
   }
 }
 
+
+
 .navbar-brand {
   color: rgb(250, 250, 250) !important;
 }
@@ -723,12 +725,14 @@ button {
 
 .login-form {
   background: #fff;
-  width: 25em;
+  width: 40em;
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
+  float: right;
+  border-radius: 7px;
 
 }
 
@@ -865,16 +869,23 @@ button {
 
 @media (max-width: 767px) {
   .login-form {
-    width: 100%;
-    margin-left: -30px;
+    margin-left: -50px;
+    width: auto;
   }
 }
 
 @media (max-width: 767px) {
-  .col-md-5 {
-    margin-left: -40px;
+  .col-md-8 {
+    margin-left: -50px;
   }
 }
+
+.col-md-8 img {
+  border-radius: 7px;
+}
+
+
+
 
 .form {
   padding: 0.375rem 00.75rem;
@@ -895,6 +906,10 @@ button {
   font-weight: bold;
 }
 
+.card-paket-pre {
+  background-color: wheat;
+}
+
 .card-tema h1 {
   font-size: 2rem;
   padding-top: 15px;
@@ -902,5 +917,5 @@ button {
 
 .home-header .btn-akhir {
   justify-content: center;
-  display: ;
+
 }
