--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
@@ -60,6 +61,7 @@ main {
   width: 200px;
   transition: all 0.5s;
   margin-left: 0px;
+  
 }
 
 .top_section {
@@ -83,6 +85,7 @@ main {
   padding: 10px 15px;
   gap: 15px;
   transition: all 0.5s;
+  text-align: left;
 }
 
 .link:hover {
@@ -99,8 +102,4 @@ main {
 .icon,
 .link_text {
   font-size: 20px;
-}
-
-.body {
-  background-color: #D9D9D9;
 }
