--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35)); */
+  background-image: linear-gradient(to left, #EEF1FF, #EEF1FF);
   @tailwind base;
   @tailwind components;
   @tailwind utilities;
