--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -497,7 +497,7 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: blueviolet;
+  background-color: #447294;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important;
